package com.mhm.action.visitor;

/**
 * @author MHm
 * @date 2020-4-20 18:16
 */
public interface Visitor {
    void visitor(Subject subject);
}
